fix spacing and color convention

--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 Design Framework
 
-1) Playful/Peace blend
-2) Colors: Primary #f76707 Secondary #343a40
+1) Playful/fun theme
+2) Colors: Primary #6c63ff Secondary #343a40
 
 */
 
@@ -53,7 +53,7 @@ section {
 header {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	column-gap: 80px;
+	column-gap: 48px;
 	margin-top: 64px;
 }
 
